crates/beancount-tree-sitter/test/corpus/parser_include.txt
=================
include absolute
=================

include "/some/absolute/filename.beancount"

---

(file
    (include (string))
)

=================
include relative
=================

include "some/relative/filename.beancount"

---

(file
    (include (string))
)
