crates/beancount-tree-sitter/test/corpus/parser_plugin.txt
=======
plugin
=======

plugin "beancount.plugin.unrealized"

---

(file
    (plugin (string))
)

===================
plugin with config
===================

plugin "beancount.plugin.unrealized" "Unrealized"

---

(file
    (plugin (string) (string))
)

=================
plugin as option
=================

option "plugin" "beancount.plugin.unrealized"

---

(file
    (option (string) (string))
)
